[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "chemical"
version = "0.0.1"
description = "Custom App for Chemical Industry"
authors = [
    { name = "Finbyz Tech Pvt Ltd" }
]
readme = "README.md"
requires-python = ">=3.10"
dependencies = []

[tool.setuptools]
packages = ["chemical"]

[tool.setuptools.package-data]
chemical = ["**/*.json", "**/*.js", "**/*.html", "**/*.css"]

# ✅ REQUIRED FOR BENCH (Frappe v16)
[tool.bench.frappe-dependencies]
frappe = ">=16.0.0,<17.0.0"
